=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 2.004

=over

=item *

In Krang::Publish I decoupled processing of assets from publish_story()
and preview_story() allowing for future subclassing into Krang::Publisher::Parallel
simply redefine _process_assets() and _process_preview_assets().
[Aaron Dancygier]

=item *

In Krang::Test::Content, modified _init_words() to skip words
containing an apostrophe. [Bodo Schulze]

=item *

Added a new configuration parameter, Charset.  This may be used to
control the character set for the Krang user-interface.  [Sam]

=item *

Fixed "Forbidden" bug in Xinha implementation by permitting 
static Xinha files.  [Jesse Erlbaum]

=item *

Made Krang::CGI::Category::find() and find_row_handler() addon v2
compliant. [Bodo Schulze]

=item * 

Added enforcement of permissions at the application and run-mode leve
rather than just at the UI level. [Michael Peters]

=item *

Make admin list manager work intuitively and statefully.  Pressing
RETURN does no longer submit the form, but adds a new to the
list. [Bodo Schulze]

=item *

In element_lib/TestParent1/* and element_lib/TestSet1/*, added addon
v2 compatibility. [Bodo Schulze]

=item *

In t/cgi.t, fixed addon v2 compat bug. [Bodo Schulze]

=item *

Upgraded to HTML::Template::Expr v0.06 - now with chained binary
operators! [Sam]

=item *

In Krang::Story, fixed addon v2 compatibility bug in find(). [Bodo
Schulze]

=item *

In Krang::History, replaced constants FIELDS, OBJECT_TYPES AND ACTIONS
with methods fields(), object_types() and actions()
respectively. [Bodo Schulze]

=item *

Allow multiple word action names in admin scheduler. [Bodo Schulze]

=item *

In admin contrib list view, made type column sortable. [Bodo Schulze]

=item *

For Krang::History, allow Krang::Story, Krang::Media and
Krang::Template to be overlayed with addon modules. [Bodo Schulze]

=item *
